--- a/build_dev.properties
+++ b/build_dev.properties
@@ -39,4 +39,4 @@ isProduction=false
 soaEntirexWebServicesURL=http://etbmo08:8080/EntireX-ETBMO08/xmlrt
 
 #Points the web services to Software AG Esb running on Windows
-soaEsbWebServicesURL=http://test5202.acmic.com:5555/ws
+soaEsbWebServicesURL=http://ESBMO08.acmic.com:5555/ws
