--- a/build_dev.properties
+++ b/build_dev.properties
@@ -36,7 +36,7 @@ epmalertrecipients=AC-IUPS-Alert@American-Community.com
 isProduction=false
 
 #Points the web services to Software AG Entire X running on Windows
-soaEntirexWebServicesURL=http://etbmo08:8080/EntireX-ETBMO08/xmlrt
+soaEntirexWebServicesURL=http://etbdev:8080/EntireX-ETBDEV/xmlrt
 
 #Points the web services to Software AG Esb running on Windows
 soaEsbWebServicesURL=http://ESBMO08.acmic.com:5555/ws
