--- a/build_test.properties
+++ b/build_test.properties
@@ -36,8 +36,7 @@ epmalertrecipients=AC-IUPS-Alert@American-Community.com
 isProduction=false
 
 #Points the web services to Software AG Entire X running on Windows
-soaEntirexWebServicesURL=http://etbmo08:8080/EntireX-ETBMO08/xmlrt
+soaEntirexWebServicesURL=http://etbtest:8080/EntireX-ETBTEST/xmlrt
 
 #Points the web services to Software AG Esb running on Windows
-soaEsbWebServicesURL=http://ESBMO08.acmic.com:5555/ws
-
+soaEsbWebServicesURL=http://ESBTEST.acmic.com:5555/ws
