--- a/build_mo08.properties
+++ b/build_mo08.properties
@@ -36,7 +36,8 @@ epmalertrecipients=AC-IUPS-Alert@American-Community.com
 isProduction=false
 
 #Points the web services to Software AG Entire X running on Windows
-soaEntirexWebServicesURL=http://etbtest:8080/EntireX-ETBTEST/xmlrt
+soaEntirexWebServicesURL=http://etbmo08:8080/EntireX-ETBMO08/xmlrt
 
 #Points the web services to Software AG Esb running on Windows
-soaEsbWebServicesURL=http://ESBTEST.acmic.com:5555/ws
+soaEsbWebServicesURL=http://ESBMO08.acmic.com:5555/ws
+
