--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -6,10 +6,7 @@ log4j.category.org.apache=ERROR,File1
 log4j.category.org.hibernate=ERROR,File1
 log4j.category.httpclient.wire=ERROR,File1
 
-log4j.appender.File1=biz.minaret.log4j.DatedFileAppender
-log4j.appender.File1.Directory=C:/fujitsu/ibpm/taskmanager/tomcat/logs
-log4j.appender.File1.Prefix=acmicc.log.
-log4j.appender.File1.Suffix=
-log4j.appender.File1.Append=true
+log4j.appender.File1=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.File1.File=C:/fujitsu/ibpm/taskmanager/tomcat/logs/acmicc.log
 log4j.appender.File1.layout=org.apache.log4j.PatternLayout
 log4j.appender.File1.layout.ConversionPattern=%5p [%d{HH:mm:ss,SSS}] [%t] (%F:%L) - %m%n
