--- a/src/Local.properties
+++ b/src/Local.properties
@@ -45,7 +45,7 @@ SendUAEmail=True
 # Active Directory Properties
 ##################################
 INITIAL_CONTEXT_FACTORY=com.sun.jndi.ldap.LdapCtxFactory
-PROVIDER_URL=ldap://acmic.com:389
+PROVIDER_URL=ldap://srv1000:389
 SECURITY_PRINCIPAL=CN=$LDAPUSERNAME$,OU=IUPS,OU=Applications,DC=acmic,DC=com
 SECURITY_CREDENTIALS=$LDAPPASSWORD$
 LOGIN_NAME=$LDAPUSERNAME$
