--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -6,7 +6,15 @@ log4j.category.org.apache=ERROR,File1
 log4j.category.org.hibernate=ERROR,File1
 log4j.category.httpclient.wire=ERROR,File1
 
+log4j.logger.IASLog=$DEBUGLEVEL$,IASLog 
+
 log4j.appender.File1=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.File1.File=C:/fujitsu/ibpm/taskmanager/tomcat/logs/acmicc.log
 log4j.appender.File1.layout=org.apache.log4j.PatternLayout
 log4j.appender.File1.layout.ConversionPattern=%5p [%d{HH:mm:ss,SSS}] [%t] (%F:%L) - %m%n
+
+log4j.appender.IASLog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.IASLog.File=C:/fujitsu/ibpm/taskmanager/tomcat/logs/ias.log
+log4j.appender.IASLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.IASLog.layout.ConversionPattern=%5p [%d{HH:mm:ss,SSS}] [%t] (%F:%L) - %m%n
+log4j.additivity.IASLog=false
